force-app/main/default/objects/Maintenance__c/fields/Braking_Fluid_Level__c.field-meta.xml
<CustomField>
    <fullName>Braking_Fluid_Level__c</fullName>
    <label>Braking Fluid Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
            <value>
                <fullName>Support Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>