force-app/main/default/objects/Maintenance__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Maintenance</relationshipLabel>
    <relationshipName>Maintenance</relationshipName>
    <type>Lookup</type>
</CustomField>