force-app/main/default/objects/Maintenance__c/fields/Oil_Level__c.field-meta.xml
<CustomField>
    <fullName>Oil_Level__c</fullName>
    <label>Oil Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
                <default>true</default>
                <label>Good</label>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>