force-app/main/default/objects/Maintenance__c/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <defaultValue>NOW() + 1</defaultValue>
    <label>Schedule Time</label>
    <type>DateTime</type>
</CustomField>