force-app/main/default/objects/Maintenance__c/fields/Tyre_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Conditions__c</fullName>
    <label>Tyre Conditions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
                <default>true</default>
                <label>Good</label>
            </value>
            <value>
                <fullName>Center Wear</fullName>
            </value>
            <value>
                <fullName>Shoulder Wear</fullName>
            </value>
            <value>
                <fullName>Camber Wear</fullName>
            </value>
            <value>
                <fullName>Toe Wear</fullName>
            </value>
            <value>
                <fullName>Cupped Wear</fullName>
            </value>
            <value>
                <fullName>Flat Spot Wear</fullName>
            </value>
            <value>
                <fullName>High Speed Feathering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>