force-app/main/default/objects/Maintenance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Bus__c</columns>
    <columns>Garage__c</columns>
    <columns>Schedule_Time__c</columns>
    <columns>Recorded_Odometer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>